# ocaml-dataloader

./: .travis.yml  README.md  dataloader-lwt.descr  dataloader-lwt.opam  dataloader.descr  dataloader.opam  dune-project
dataloader-lwt/src/: dataloader_lwt.ml  dataloader_lwt.mli  dune  jbuild
dataloader-lwt/test/: dune  jbuild  test.ml
dataloader/src/: dataloader.ml  dataloader.mli  dune  jbuild
dataloader/test/: dune  jbuild  test.ml
