opam-version: "1.2"
maintainer: "Andreas Garnaes <andreas.garnaes@gmail.com>"
authors: "Andreas Garnaes <andreas.garnaes@gmail.com>"
homepage: "https://github.com/andreas/ocaml-dataloader"
doc: "https://andreas.github.io/ocaml-dataloader/"
bug-reports: "https://github.com/andreas/ocaml-dataloader/issues"
dev-repo: "https://github.com/andreas/ocaml-dataloader.git"
build: [["jbuilder" "build" "-p" name "-j" jobs]]
build-test: [["jbuilder" "runtest" "-p" name "-j" jobs]]
depends: [
  "jbuilder" {build}
  "dataloader"
  "lwt"
  "alcotest" {test}
]
available: [
  ocaml-version >= "4.03.0"
]
