opam-version: "2.0"
maintainer: "Andreas Garnaes <andreas.garnaes@gmail.com>"
authors: "Andreas Garnaes <andreas.garnaes@gmail.com>"
homepage: "https://github.com/andreas/ocaml-dataloader"
doc: "https://andreas.github.io/ocaml-dataloader/"
bug-reports: "https://github.com/andreas/ocaml-dataloader/issues"
dev-repo: "git+https://github.com/andreas/ocaml-dataloader.git"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml" {>= "4.03.0"}
  "dune" {build & >= "1.0"}
  "alcotest" {with-test}
]
synopsis: "Dataloader for ocaml"
